fix table fixed overflow hidden bug

--- a/src/components/table/table.styl
+++ b/src/components/table/table.styl
@@ -147,7 +147,7 @@
         padding: 12px 0
         font-weight: normal
         &.is-hidden > .cell
-          visibility: hidden
+          visibility: visible
         & > .cell
           line-height: 23px
           padding-left: 10px
